<resources>
    <string name="app_name">BreathUIT</string>
    <string name="login">Login</string>
    <string name="textdesc">Explore real-time data on PM2.5, PM10, O3, NO2, CO, and more.</string>
    <string name="textbtn">Login</string>
    <string name="textsignup">Don’t have an account?</string>
    <string name="btnsignup">Signup</string>
    <string name="textloginwith">Or login with</string>
    <string name="loginwgg">Login with Google</string>
    <string name="loginland">Login</string>
    <string name="texthaveaccount">Already have an account?</string>
    <string name="textchooseland">Don’t have an account?</string>
    <string name="btnsignland">Signup</string>
    <string name="textloginwithland">Or login with</string>
    <string name="loginwggland">Login with Google</string>
    <string name="btnback">Back</string>
    <string name="texttile">Login</string>
    <string name="textlogindes">Please login to get your local AQI data.</string>
    <string name="hintuser">Username</string>
    <string name="hintpass">Password</string>
    <string name="remember">Remember me</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="btnbackland">Back</string>
    <string name="orwith">Or with</string>
    <string name="btnggland">Google</string>
    <string name="forgotpassdialog">Forgot password</string>
    <string name="forgotpassdesc">You will receive an email with a link to reset your password. Please check your inbox.</string>
    <string name="resendmail">Resend email link</string>
    <string name="changemail">Change email ID</string>
    <string name="forgotpassforgot">Forgot password</string>
    <string name="forgodescfor">Provide your account\'s email  for which you want to reset your password.</string>
    <string name="hintemail">Your email address</string>
    <string name="btnrequest">Send request</string>
    <string name="textintrosignup">Ready to elevate your air quality experience? Sign up now! </string>
    <string name="textintrologin">Your journey begins here - login to breathe in a tailored air quality experience.</string>
    <string name="textchooseforgot">Have an account?</string>
    <string name="textforgotpassland">Forgot password</string>
    <string name="textupdate">Password updated!</string>
    <string name="textupdatedesc">Your password has been updated!</string>
    <string name="resetpass">Reset password</string>
    <string name="textresetdesc">- Must be at least 8 characters long.\n                           - Must contain at least one upper case.\n                           - Must contain at least one number or special character.</string>
    <string name="repass">Re-type your password</string>
    <string name="submit">Submit</string>
    <string name="hintusername">User Name</string>
    <string name="hintyouremailaddress">Your email address</string>
    <string name="titleintro">Hi, Welcome!</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>
</resources>
