<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android.support.design="http://schemas.android.com/tools"
    android:background="@drawable/background2">


    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:paddingRight="0dp"
        android:spinnerMode="dropdown"
        android:textAlignment="viewEnd"
        android:paddingEnd="30dp"/>

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_back_arrow"
        android:gravity="center_vertical"
        android:lineHeight="24sp"
        android:paddingStart="16dp"
        android:paddingEnd="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="8dp"
        />

    <LinearLayout
        android:id="@+id/LinearLayoutTitle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayoutMainInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        >

        <TextView
            android:id="@+id/TextForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:letterSpacing="0.05"
            android:text="@string/forgotpassforgot"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/TextFogotPassDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:letterSpacing="0.02"
            android:text="@string/forgodescfor"
            android:textColor="@color/textDecs"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMainInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/ButtonSendRequest"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        >

        <!--        Email address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputEmailAddress"
            android:layout_width="match_parent"
            android:imeOptions="flagNoExtractUi"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            android:hint="@string/hintemail"
            android:textColorHint="@color/textColorHint"
            app:cursorColor="@color/colorSencondPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_custom"
                android:drawablePadding="8dp"
                android:textColor="@color/textInput"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/ButtonSendRequest"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="350dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/btn_background_gradient"
        app:backgroundTint="@null"
        android:fontFamily="@font/poppinsbold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:stateListAnimator="@null"
        android:text="@string/btnrequest"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_above="@+id/LinearLayoutSignup" />



    <LinearLayout
        android:id="@+id/LinearLayoutSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextChooseSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:lineSpacingExtra="6sp"
            android:text="@string/textsignup"
            android:textColor="#6B7280"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ButtonSignup"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppinsregular"
            android:lineSpacingExtra="6sp"
            android:text="@string/btnsignup"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>

