<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:minHeight="48dp"
        android:paddingEnd="30dp"
        android:paddingRight="0dp"
        android:spinnerMode="dropdown"
        android:textAlignment="viewEnd" />


    <ImageView
        android:id="@+id/ImageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_above="@+id/LinearLayoutTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:src="@drawable/logo_app" />

    <LinearLayout
        android:id="@+id/LinearLayoutTitle"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:letterSpacing="0.02"
            android:lineHeight="38sp"
            android:text="@string/titleintro"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/TextLoginDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:letterSpacing="0.03"
            android:text="@string/textdesc"
            android:textColor="@color/textDecs"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_above="@+id/ButtonSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_background_gradient"
        android:cursorVisible="true"
        android:elevation="20px"
        android:fontFamily="@font/poppinsbold"
        android:lineHeight="24sp"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp"
        android:stateListAnimator="@null"
        android:text="@string/textbtn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/ButtonSignup"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="70dp"
        android:background="@drawable/cst_button_login_with_gg"
        android:drawingCacheQuality="high"
        android:fontFamily="@font/poppinsbold"
        android:lineHeight="24sp"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp"
        android:text="@string/btnsignup"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/colorSencondPrimary" />

</RelativeLayout>