<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android.support.design="http://schemas.android.com/tools"
    android:background="@drawable/background2">
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />
    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_back_arrow"
        android:gravity="center_vertical"
        android:lineHeight="24sp"
        android:paddingStart="16dp"
        android:paddingEnd="16sp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="8dp"
        />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:paddingRight="0dp"
        android:spinnerMode="dropdown"
        android:textAlignment="viewEnd"
        android:paddingEnd="30dp"/>

    <LinearLayout
        android:id="@+id/LinearLayoutTitle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayoutMainInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        >

        <TextView
            android:id="@+id/TextTitleSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:letterSpacing="0.05"
            android:text="@string/btnsignup"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/TextSignupDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:letterSpacing="0.02"
            android:text="@string/textintrosignup"
            android:textColor="@color/textDecs"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMainInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/ButtonSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        >

        <!--        Your full name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputYourFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            android:textColorHint="@color/textColorHint"
            app:cursorColor="@color/colorSencondPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            android:hint="@string/hintusername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableStart="@drawable/ic_user_custom"
                android:drawablePadding="8dp"
                android:textColor="@color/textInput"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Email address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            android:textColorHint="@color/textColorHint"
            app:cursorColor="@color/colorSencondPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            android:hint="@string/hintyouremailaddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_focused"
                android:drawablePadding="8dp"
                android:textColor="@color/textInput"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            android:hint="@string/hintpass"
            android:textColorHint="@color/textColorHint"
            app:cursorColor="@color/colorSencondPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_focused"
                android:drawablePadding="8dp"
                android:textColor="@color/textInput"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        Re-type your password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputPasswordReType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            app:boxCornerRadiusTopStart="9dp"
            app:boxCornerRadiusTopEnd="9dp"
            app:boxCornerRadiusBottomStart="9dp"
            app:boxCornerRadiusBottomEnd="9dp"
            android:textColorHint="@color/textColorHint"
            app:cursorColor="@color/colorSencondPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            android:hint="@string/repass"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repassEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_focused"
                android:drawablePadding="8dp"
                android:textColor="@color/textInput"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:indeterminateTint="#000000"
        android:layout_above="@+id/TextLoginWith"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:layout_gravity="center"
        android:visibility="invisible" />
    <Button
        android:id="@+id/ButtonSignup"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_above="@+id/TextLoginWith"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/btn_background_gradient"
        app:backgroundTint="@null"
        android:fontFamily="@font/poppinsbold"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:stateListAnimator="@null"
        android:text="@string/btnsignup"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextChooseSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:lineHeight="22sp"
            android:lineSpacingExtra="6sp"
            android:text="@string/texthaveaccount"
            android:textColor="#6B7280"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/ButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppinsregular"
            android:lineSpacingExtra="6sp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/TextLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonGoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:lineHeight="22sp"
        android:lineSpacingExtra="6sp"
        android:text="@string/textloginwith"
        android:textColor="#9CA3AF"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/ButtonGoogle"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:background="@drawable/cst_button_login_with_gg"
        android:drawableLeft="@drawable/ic_google"
        android:drawingCacheQuality="high"
        android:fontFamily="@font/poppinsbold"
        android:lineHeight="24sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/loginwgg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        />

</RelativeLayout>

